sventon change history
-----------------------------------------------------------------------------------------

[590] Added: Feature #1868 - Unified diff view.
[563] Added: Feature #2259 - Revision info cache.
[552] Added: Upgraded to JavaSVN 1.1.0beta2.
[546] Fixed: Redesign of entry cache.
      Added: Feature #2175 - Commit message cache using Lucene.
      Added: Upgraded to ehcache 1.2.
      Added: Upgraded to JavaSVN 1.1.0b.

[582] Release 1.0.0 (2006-07-03)
[575] Fixed: Bug #7985 - Tooltip text wrap in browser view.
[573] Fixed: Bug #7983 - View log for a file renders incorrect navigation.

[544] Release 1.0 RC4 (2006-05-28)
[520] Fixed: Bug #7229 - Latest commit info not shown.
[519] Fixed: Bug #7230 - Wrong revision in links from 'latest commit info' box.

[513] Release 1.0 RC3 (2006-04-16)
[509] Fixed: Bug #7136 - The path link contains Chinese still doesn't work.
[501] Added: Upgraded to JavaSVN 1.0.4.
[499] Fixed: Bug #7000 - Chinese characters in file name doesn't work.

[496] Release 1.0 RC2 (2006-04-02)
[477] Added: Possibility to diff entries in browser and search result view.
[468] Added: Feature #1871 - Possibility to disable index.
[465] Added: Upgraded to JHighlight 1.0.
[450] Fixed: Flatten and search buttons are now disabled if not browsing HEAD.
[449] Fixed: Bug #6705 and #6374.
[444] Added: Feature #1867 - Raw file view.

[433] Release 1.0 RC1 (2006-02-14)
[423] Added: Upgraded to JavaSVN 1.0.3.
[408] Fixed: Renamed 'default-sventon.properties' to 'sventon.properties.
[398] Fixed: Bug #5662 - Uncaught exceptions causes stack trace on screen
[397] Added: Feature #1685 - Background index population.
[394] Added: Upgraded to Spring 1.2.6
[373] Added: Display of all current locks, recursively.
[365] Added: Upgraded to JavaSVN 1.0.2.
[356] Added: File lock display in browser view.
[350] Fixed: Removed mount point feature (too much pain, not enough gain).
[348] Added: Latest commit info stays visible when following a link from it.