@@ -34,3 +34,5 @@ showrawfile.button.text=Show raw
 showrawfile.button.tooltip=Show the unprocessed file
 showdir.button.text=Show directory
 showrevinfo.link.tooltip=Show\\u00a0revision\\u00a0details
+filter.text=Filter extensions
+filter.button.text=Apply
